🎨 Fix UI cutoff for survey rating scale buttons (#1226) (#1228)